Correct Swagger
